# meme-downloader-rs

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  docker-compose.yml  mprocs.yaml
.docker/app/: Dockerfile
.github/workflows/: lint-on-push.yml
crates/app/: Cargo.toml
crates/app-bots/: Cargo.toml
crates/app-bots/src/: lib.rs
crates/app-bots/src/bot/telegram/: download_helper.rs  mod.rs
crates/app-bots/src/bot/telegram/handlers/: message.rs
crates/app-config/: Cargo.toml
crates/app-config/src/: cli.rs  common.rs  file.rs  lib.rs
crates/app-downloader/: Cargo.toml
crates/app-downloader/src/: lib.rs
crates/app-downloader/src/downloaders/: generic.rs  imgur.rs  instagram.rs  mastodon.rs  mod.rs  reddit.rs  tumblr.rs  twitter.rs  yt_dlp.rs
crates/app-downloader/src/downloaders/common/: request.rs
crates/app-fixers/: Cargo.toml
crates/app-fixers/src/: crop.rs  file_extensions.rs  file_name.rs  lib.rs  media_formats.rs  split_scenes.rs  util.rs
crates/app-helpers/: Cargo.toml
crates/app-helpers/src/: dirs.rs  ffprobe.rs  id.rs  lib.rs  results.rs  trash.rs
crates/app-logger/: Cargo.toml
crates/app-logger/src/: lib.rs
crates/app/src/: main.rs
crates/app/src/notif/: mod.rs
crates/bots/: Cargo.toml
crates/bots/src/: lib.rs
crates/bots/src/bot/telegram/: download_helper.rs  mod.rs
crates/bots/src/bot/telegram/handlers/: message.rs
crates/config/: Cargo.toml
crates/config/src/: cli.rs  common.rs  config.toml  file.rs  lib.rs
crates/downloader/: Cargo.toml
crates/downloader/src/: lib.rs
crates/downloader/src/downloaders/: instagram.rs  mastodon.rs  mod.rs  tumblr.rs  twitter.rs  yt_dlp.rs
crates/fixers/: Cargo.toml
crates/fixers/src/: crop.rs  file_extensions.rs  file_name.rs  image_formats.rs  lib.rs  media_formats.rs  split_scenes.rs  util.rs  video_formats.rs
crates/helpers/: Cargo.toml
crates/helpers/src/: dirs.rs  ffprobe.rs  id.rs  lib.rs  results.rs  trash.rs
crates/logger/: Cargo.toml
src/: main.rs
src/args/: mod.rs
src/bot/: mod.rs
src/bot/telegram/: download_helper.rs  logger.rs  mod.rs
src/bot/telegram/handlers/: message.rs
src/config/: mod.rs
src/downloaders/: instagram.rs  mod.rs  twitter.rs  yt_dlp.rs
src/downloaders/util/: mod.rs  results.rs  trash.rs
src/downloaders/util/fix/: crop.rs  file_extensions.rs  mod.rs  video_formats.rs
src/fixers/: crop.rs  file_extensions.rs  file_name.rs  mod.rs  video_formats.rs
src/helpers/: ffprobe.rs  mod.rs  results.rs  trash.rs
src/logger/: mod.rs
src/notif/: mod.rs
