[package]
name = "app-bots"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-recursion = "1.0.4"
app-config = { version = "*", path = "../app-config" }
app-downloader = { version = "*", path = "../app-downloader" }
app-fixers = { version = "*", path = "../app-fixers" }
futures = "0.3.28"
app-helpers = { version = "*", path = "../app-helpers" }
infer = "0.13.0"
app-logger = { version = "*", path = "../app-logger" }
rayon = "1.7.0"
reqwest = { version = "0.11.18", default-features = false }
scopeguard = "1.1.0"
teloxide = { optional = true, version = "0.12.2", default-features = false, features = [
  "macros",
  "rustls",
] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }

[features]
telegram = ["app-config/telegram-bot", "dep:teloxide"]

[lints]
workspace = true
