[package]
name = "app-bots"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.71"
async-recursion = "1.0.4"
app-config.workspace = true
app-downloader.workspace = true
app-fixers.workspace = true
futures = "0.3.28"
app-helpers.workspace = true
infer = "0.15.0"
app-logger.workspace = true
rayon = "1.7.0"
reqwest = { version = "0.11.18", default-features = false }
scopeguard = "1.1.0"
teloxide = { optional = true, version = "0.12.2", default-features = false, features = [
  "macros",
  "rustls",
] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }

[features]
telegram = ["app-config/telegram-bot", "dep:teloxide"]

[lints]
workspace = true
