[package]
name = "app-downloader"
version = "0.3.1"
edition = "2021"

[dependencies]
app-fixers = { version = "*", path = "../app-fixers" }
app-logger = { version = "*", path = "../app-logger" }
once_cell = "1.18.0"
rayon = "1.7.0"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive", "alloc"] }
serde_json = { version = "1.0.96", features = ["alloc", "preserve_order"] }
reqwest = { version = "0.11.14", default-features = false, features = [
  "blocking",
  "json",
  "deflate",
  "gzip",
  "brotli",
  "rustls-tls",
  "trust-dns",
] }
url = "2.4.0"
app-config = { version = "*", path = "../app-config" }
app-helpers = { version = "*", path = "../app-helpers" }
unicode-segmentation = "1.10.1"
tl = "0.7.8"
mime2ext = "0.1.52"

[lints]
workspace = true
