[package]
name = "app-fixers"
version = "0.3.0"
edition = "2021"

[dependencies]
app-config = { version = "*", path = "../app-config" }
filetime = "0.2.21"
fs_extra = "1.3.0"
app-helpers = { version = "*", path = "../app-helpers" }
image = "0.24.6"
infer = "0.13.0"
log = "0.4.19"
rayon = "1.7.0"
resolve-path = "0.1.0"
scopeguard = "1.2.0"
