[package]
name = "app-helpers"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
app-config = { version = "*", path = "../app-config" }
app-logger = { version = "*", path = "../app-logger" }
serde = "1.0.164"
serde_json = "1.0.96"
trash = "3.0.3"

[lints]
workspace = true
