[package]
name = "app-helpers"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
app-config.workspace = true
app-logger.workspace = true
serde = "1.0.164"
serde_json = "1.0.96"
trash = "3.0.3"

[lints]
workspace = true
