[package]
name = "meme-downloader"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
atty = { version = "0.2.14", optional = true }
bots = { version = "*", path = "../bots" }
config = { version = "*", path = "../config" }
downloader = { version = "*", path = "../downloader" }
fixers = { version = "*", path = "../fixers" }
log = "0.4.19"
logger = { version = "*", path = "../logger" }
notify-rust = { version = "4.8.0", optional = true, features = ["images"] }
tokio = { version = "1.28.2", features = [
  "rt-multi-thread",
  "macros",
  "fs",
], optional = true }

[features]
default = ["ask-for-url"]
all = ["desktop-notifications", "bots"]
bots = ["telegram-bot"]
ask-for-url = ["atty"]
desktop-notifications = ["dep:notify-rust"]
telegram-bot = ["config/telegram-bot", "bots/telegram", "dep:tokio"]
