[package]
name = "meme-downloader"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.71"
atty = { version = "0.2.14", optional = true }
app-bots.workspace = true
app-config.workspace = true
app-downloader.workspace = true
app-fixers.workspace = true
app-logger.workspace = true
notify-rust = { version = "4.8.0", optional = true, features = ["images"] }
tokio = { version = "1.28.2", features = [
  "rt-multi-thread",
  "macros",
  "fs",
], optional = true }

[features]
default = ["ask-for-url"]
all = ["desktop-notifications", "bots", "ask-for-url"]
bots = ["telegram-bot", "dep:tokio"]
ask-for-url = ["atty"]
desktop-notifications = ["dep:notify-rust"]
telegram-bot = ["app-config/telegram-bot", "app-bots/telegram"]

[lints]
workspace = true
