[package]
name = "config"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive", "env"] }
directories = "5.0.1"
lazy_static = "1.4.0"
resolve-path = "0.1.0"
serde = "1.0.164"
serde_json = { version = "1.0.99", features = ["alloc", "preserve_order"] }
toml = "0.7.4"
which = "4.4.0"


[features]
default = []
telegram-bot = []
